hero - fixed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3630,8 +3630,12 @@ blockquote.default {
 	margin: 20px;
 }
 
-.hero {
-
+@media only screen and (max-width:1200px) {
+	.hero {
+	background: url('../images/bg_3.jpg') no-repeat;
+	color: #fff;
+	padding: 40px 0px 50px 0px;
+	}
 }
 
 /* ===================================================== */
